minor spacing fix on showcaseCategories

--- a/src/components/Showcase.css
+++ b/src/components/Showcase.css
@@ -45,7 +45,8 @@
 
 .showcaseCategories {
     border: 1px solid lightgrey;
-    height: 154px;
+    height: auto;
+    padding-bottom: 15px;
     border-radius: 4px;
 }
 
@@ -67,7 +68,8 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 20px;
-    padding: 5px 30px;
+    padding: 10px 30px 0px 30px;
+    margin-bottom: 0px;
     font-size: 13px;
 }
 
